grammar.js
    source_file: ($) => repeat($.statement),

    // Comments
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    number_literal: ($) => choice(/[0-9]+/, /[0-9]+\.[0-9]+/),

    function_declaration: ($) =>
      seq(
        optional("pub"),
        "fn",
        field("name", $.identifier),
        optional(field("generic_params", $.generic_params)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        choice(
          field("body", $.block),
          seq("=>", field("expression", $.expression)),
        ),
      ),

    parameters: ($) => seq("(", optional(commaSep($.parameter)), ")"),

    parameter: ($) =>
      seq(field("name", $.identifier), ":", field("type", $.type)),

    // Struct and kind declarations
    struct_declaration: ($) =>
      prec.right(
        seq(
          optional("pub"),
          "struct",
          field("name", $.identifier),
          optional(field("generic_params", $.generic_params)),
          choice(
            // Tuple-style struct (simple case)
            seq("(", commaSep($.struct_field), optional(","), ")"),

            // Block-style struct with fields and methods
            seq(
              optional(field("fields", $.struct_fields)),
              optional(field("methods", repeat($.struct_method))),
              optional(","),
              "end", // Always require 'end' for block-style structs
            ),
          ),
        ),
      ),

    struct_field: ($) =>
      seq(
        optional("pub"),
        field("name", $.identifier),
        ":",
        field("type", $.type),
      ),

    variable_declaration: ($) =>
      seq(
        optional("pub"),
        choice("let", "var", "const"),
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", choice($.expression, $.unit_literal)),
      ),

    // Assignment
    match_statement: ($) =>
      seq("match", field("value", $.expression), repeat($.match_arm), "end"),

    match_arm: ($) =>
      seq(
        field("pattern", $.match_pattern),
        optional(seq("where", field("guard", $.expression))),
        "=>",
        field("body", choice($.block, $.expression)),
        optional(","),
      ),

    match_pattern: ($) =>
      choice(
        $.literal,
        $.identifier,
        "_",
        seq(
          field("enum_name", $.identifier),
          ".",
          field("variant", $.identifier),
          optional(seq("(", commaSep($.match_pattern), ")")),
        ),
      ),

    // Macro declaration and invocation
    block: ($) => seq(repeat1($.statement), "end"),

    expression: ($) =>
      choice(
        // Call expressions (highest precedence)
        prec(15, $.function_call),
        prec(20, $.method_call),
        prec(11, $.member_expression),
        prec(11, $.index_expression),

        // Simple expressions (high precedence)
        prec(10, $.identifier),
        prec(9, $.literal),

        // Other expressions
        $.binary_expression,
        $.unary_expression,
        $.lambda,
        $.block_expression,
        $.if_expression,

        // Creation expressions (lower precedence than call expressions)
        prec(8, $.struct_expression),
        prec(8, $.array_literal),
        prec(8, $.tuple_literal),
        prec(8, $.enum_variant_expression),

        // Macro expressions
        $.macro_expression,
        $.type_cast,

        // Parenthesized expressions
        $.parenthesized_expression,
      ),

    block_expression: ($) =>
      prec(2, seq("do", repeat($.statement), optional($.expression), "end")),

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        "then",
        field("consequence", $.expression),
        "else",
        field("alternative", $.expression),
        "end",
      ),

    lambda: ($) =>
      prec.right(
        5,
        choice(
          seq(
            field(
              "params",
              choice($.identifier, seq("(", commaSep($.parameter), ")")),
            ),
            "=>",
            field("body", $.expression),
          ),
          seq(
            field(
              "params",
              choice($.identifier, seq("(", commaSep($.parameter), ")")),
            ),
            "=>",
            "do",
            repeat($.statement),
            optional($.expression),
            "end",
          ),
        ),
      ),

    function_call: ($) =>
      prec.right(
        15,
        seq(field("function", $.identifier), field("arguments", $.arguments)),
      ),

    arguments: ($) => seq("(", optional(commaSep($.argument)), ")"),

    binary_expression: ($) => {
      const PREC = {
        OR: 1,
        AND: 2,
        EQUALITY: 3,
        COMPARISON: 4,
        ADD: 5,
        MULTIPLY: 6,
        EXPONENT: 7,
        PIPE: 0,
      };

      return choice(
        prec.left(
          PREC.OR,
          seq(
            field("left", $.expression),
            choice("||", "or"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.AND,
          seq(
            field("left", $.expression),
            choice("&&", "and"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.EQUALITY,
          seq(
            field("left", $.expression),
            choice("==", "!="),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.expression),
            choice("<=", ">=", "<", ">"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.ADD,
          seq(
            field("left", $.expression),
            choice("+", "-"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.MULTIPLY,
          seq(
            field("left", $.expression),
            choice("*", "/", "%"),
            field("right", $.expression),
          ),
        ),
        prec.right(
          PREC.EXPONENT,
          seq(field("left", $.expression), "^", field("right", $.expression)),
        ),
        prec.left(
          PREC.PIPE,
          seq(field("left", $.expression), "|>", field("right", $.expression)),
        ),
      );
    },

    type: ($) =>
      choice(
        $.basic_type,
        $.generic_type,
        $.function_type,
        $.array_type,
        $.tuple_type,
        "()", // Unit type
      ),
